<resources>
    <string name="app_name">Project</string>
    <string name="login">Login</string>
    <string name="Email">E-mail</string>
    <string name="password">Password</string>
    <string name="login2">Login</string>
    <string name="register">Register</string>
    <string name="register2">Register</string>
    <string name="Empty_Email">Enter e-mail</string>
    <string name="password_empty">Empty password</string>
    <string name="login_now">Sign in!</string>
    <string name="register_text">You already have account?</string>
    <string name="login_text">Don\'t have account?</string>
    <string name="register_now">Register now!</string>
    <string name="account_created">Account created.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="login_successful">Login successful.</string>
    <string name="topic">Choose Topic</string>
    <string name="Start">Start Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="TopicNoSelect">Please select the topic</string>
    <string name="next">Next</string>
    <string name="PhoneUsed">Phone lifeline has already been used!</string>
    <string name="SmsUsed">SMS lifeline has already been used!</string>
    <string name="time_over">Time Over</string>
    <string name="settings">App Settings</string>
    <string name="darkmode">Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="findplayers">Find Players</string>
    <string name="NoAnswerSelect">Please select an option</string>
    <string name="Submit">Submit Quiz\n</string>
    <string name="correct">Correct\n</string>
    <string name="incorrect">Incorrect\n</string>
    <string name="correct_answers">Correct Answers: %d</string>
    <string name="incorrect_answers">Incorrect Answers: %d</string>
    <string name="random_player_results">Players Results</string>
    <string name="player_result">%s\nC: %d, I: %d</string>
    <string name="back_to_main">Back to Main</string>
    <string name="quiz_summary">Quiz Statistics</string>
</resources>