<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/Background_Color"
    tools:context=".QuizSummaryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/Navbar">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            style="@style/back_button" />

        <TextView
            android:id="@+id/TopicName"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/quiz_summary"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/correctAnswersCircle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:background="@drawable/circle_background"
            android:text="0"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginEnd="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/correctAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_answers"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                style="@style/Text" />

            <TextView
                android:id="@+id/incorrectAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incorrect_answers"
                android:textSize="16sp"
                style="@style/Text"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/randomPlayerResultsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/random_player_results"
        android:textSize="16sp"
        android:textStyle="bold"
        style="@style/Text"/>

    <LinearLayout
        android:id="@+id/randomPlayerResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:weightSum="5">

        <!-- Placeholder for dynamically added player results -->
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backToMainBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/back_to_main"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:background="@drawable/round_back_green20"
        android:layout_marginEnd="20dp" />
</LinearLayout>
